# dicTerm

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  agents.md  test_integration  test_terminal
.config/: dicTerm.conf.example
.opencode/agents/: agent-creator.md  ansi.md  font-renderer.md  input.md  orchestrator.md  renderer.md  reviewer.md
build-rel/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dicTerm  test_ansi_colors  test_config  test_font_codepoints  test_input  test_integration  test_parser  test_screen  test_scrollback  test_terminal
build-rel/Testing/Temporary/: CTestCostData.txt
include/: clipboard.h  config.h  font.h  gl_renderer.h  input.h  mouse.h  parser.h  screen.h  scrollback.h
scripts/: install.sh
src/: clipboard.c  config.c  font.c  gl_renderer.c  input.c  main.c  mouse.c  parser.c  screen.c  scrollback.c  test_ansi_colors.c  test_clipboard.c  test_config.c  test_font_codepoints.c  test_input.c  test_integration.c  test_mouse.c  test_parser.c  test_screen.c  test_scrollback.c  test_terminal.c
